* config/sparc/sol2-sld-64.h: Include dbxelf.h again.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47856 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-11  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/sparc/sol2-sld-64.h: Include dbxelf.h again.
+
 Mon Dec 10 15:54:27 2001  Jeffrey A Law  (law@cygnus.com)
 
 	* combine.c (known_cond): Check mode of each operand to determine
