* check-init.c (check_init) [SWITCH_EXPR]: Use SWITCH_HAS_DEFAULT.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-10  Tom Tromey  <tromey@redhat.com>
+
+	* check-init.c (check_init) [SWITCH_EXPR]: Use SWITCH_HAS_DEFAULT.
+
 Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* Make-lang.in (jvspec.o): Add $(OUTPUT_OPTION).
