--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-10  Tom Tromey  <tromey@redhat.com>
+
+	Fix for PR libgcj/5064.
+	* java/lang/natClassLoader.cc: Don't include stdio.h.
+	(_Jv_RegisterClassHookDefault): Don't use snprintf.
+
 2001-12-09  Per Bothner  <per@bothner.com>
 
 	* gnu/gcj/xlib/XImage.java (toString):  Add missing initialization.
