MAINTAINERS (Write After Approval): Add myself.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47866 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-11  Matthias Klose  <doko@debian.org>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2001-12-09  Zack Weinberg  <zack@codesourcery.com>
 
 	* MAINTAINERS: Update my email address.
