* config/alpha/x-vms (version): Change "." to "_".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47870 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Tue Dec 11 07:08:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
+	* config/alpha/x-vms (version): Change "." to "_".
+
 	* configure.in: Hardcode that vfork works on VMS host.
 	* configure: Regenerated.
 
