--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Tue Dec 11 07:08:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
+	* libgcc2.c (_bb): Remove ctime declaration.
+
 	* Makefile.in (stage[1234]-start): $(LN_S) utilities in a manner
 	that works if LN_S = cp.
 
