* intl/localealias.c (strings.h): Include.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47873 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/intl/ChangeLog
+++ b/gcc/intl/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 11 07:08:57 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* localealias.c (strings.h): Include.
+
 Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* Makefile.in (OUTPUT_OPTION): Add configure variable.
