* lib/prune.exp (prune_gcc_output): Also handle "In member         function".  So many permutations...
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47875 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Jason Merrill  <jason@redhat.com>
+
+	* lib/prune.exp (prune_gcc_output): Also handle "In member
+	function".  So many permutations...
+
 2001-12-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/typedef1.C: New test.
