* lex.c (java_init_lex): Define wfl_to_string as 	gnu.gcj.runtime.StringBuffer unless generating bytecode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47882 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Tom Tromey  <tromey@redhat.com>
+
+	* lex.c (java_init_lex): Define wfl_to_string as
+	gnu.gcj.runtime.StringBuffer unless generating bytecode.
+
 2001-12-11  Jeff Sturm  <jsturm@one-point.com>
 
 	* class.c (make_method_value): Use null_pointer_node to
