--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Richard Henderson  <rth@redhat.com>
+
+	* objc/objc-act.c (build_constructor): Cast initializer values
+	to the proper field types.
+
 2001-12-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* unwind-dw2.c (execute_cfa_program): Fix DW_CFA_restore handling.
