* objc/objc-act.c (finish_message_expr): Fix misplaced parens in a         test of class names.
        * objc/compile: New test directory.
        * objc/compile/compile.exp: New expect script.
        * objc/compile/20011211-1.m: New compile test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47886 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-11  Stan Shebs  <shebs@apple.com>
+
+	* objc/compile: New test directory.
+	* objc/compile/compile.exp: New expect script.
+	* objc/compile/20011211-1.m: New compile test.
+
 2001-12-11  Jason Merrill  <jason@redhat.com>
 
 	* lib/prune.exp (prune_gcc_output): Also handle "In member
