--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Stan Shebs  <shebs@apple.com>
+
+	* objc/objc-act.c (finish_message_expr): Fix misplaced parens in a
+	test of class names.
+
 2001-12-11  David O'Brien  <obrien@FreeBSD.org>
 
 	* config.gcc (m68020-*-elf*): Expand tm_file to include all needed
