* c-common.c (combine_strings): Complain if concatenating 	__FUNCTION__. 	* c-parse.in (yylexname): Flag artificial strings. 	* tree.h (TREE_ARTIFICIAL_STRING_P): New. doc: 	* extend.texi: Update. testsuite: 	* gcc.dg/concat.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47890 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-11  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-common.c (combine_strings): Complain if concatenating
+	__FUNCTION__.
+	* c-parse.in (yylexname): Flag artificial strings.
+	* tree.h (TREE_ARTIFICIAL_STRING_P): New.
+doc:
+	* extend.texi: Update.
+
 2001-12-11  Aldy Hernandez  <aldyh@redhat.com>
 
 	* c-common.c (type_for_mode): Handle unsigned vectors.
