--- a/gcc/doc/extend.texi
+++ b/gcc/doc/extend.texi
@@ -4120,8 +4120,9 @@ On the other hand, @samp{#ifdef __FUNCTION__} does not have any special
 meaning inside a function, since the preprocessor does not do anything
 special with the identifier @code{__FUNCTION__}.
 
-GCC also supports the magic word @code{__func__}, defined by the
-ISO standard C99:
+Note that these semantics are deprecated, and that GCC 3.2 will handle
+@code{__FUNCTION__} and @code{__PRETTY_FUNCTION__} the same way as
+@code{__func__}.  @code{__func__} is defined by the ISO standard C99:
 
 @display
 The identifier @code{__func__} is implicitly declared by the translator
