--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-11  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/concat.c: New test.
+
 2001-12-11  Stan Shebs  <shebs@apple.com>
 
 	* objc/compile: New test directory.
