cp: 	PR g++/51 	* parse.y (frob_specs): Indicate it is a language linkage which 	contained the extern. 	* decl.c (grokdeclarator): Allow extern language linkage with 	other specifiers. testsuite: 	* g++.dg/other/linkage1.C: New test. 	* g++.old-deja/g++.brendan/err-msg2.C: Alter to avoid two 	specifiers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR g++/51
+	* parse.y (frob_specs): Indicate it is a language linkage which
+	contained the extern.
+	* decl.c (grokdeclarator): Allow extern language linkage with
+	other specifiers.
+
 2001-12-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR g++/72
