2001-12-11  Daniel Berlin  <dan@cgsoftware.com>
	* sched-rgn.c (CONST_BASED_ADDRESS_P): CONST_INT -> CONSTANT_P.
	(may_trap_exp): Stores only are risk if they trap, too, not just
	if code == MEM.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47900 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-11  Daniel Berlin  <dan@cgsoftware.com>
+
+	* sched-rgn.c (CONST_BASED_ADDRESS_P): CONST_INT -> CONSTANT_P.
+	(may_trap_exp): Stores only are risk if they trap, too, not just
+	if code == MEM.
+
 2001-12-11  Aldy Hernandez  <aldyh@redhat.com>
 
         * flow.c (find_regno_partial): Indent properly.  Add a default to
