--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,26 @@
+2001-12-11  Steve Ellcey  <sje@cup.hp.com>
+
+	* doc/tm.texi (FUNCTION_ARG_REG_LITTLE_ENDIAN): New.
+	* defaults.h (FUNCTION_ARG_REG_LITTLE_ENDIAN): New.
+	* calls.c (store_unaligned_arguments_into_pseudos): Check
+	FUNCTION_ARG_REG_LITTLE_ENDIAN to see how structures
+	are passed/returned.
+	* expr.c (move_block_from_reg): Ditto.
+	(move_block_from_reg): Ditto.
+	(copy_blkmode_from_reg): Ditto.
+	* stmt.c (expand_return): Ditto.
+	* stor-layout.c (compute_record_mode): If
+	FUNCTION_ARG_REG_LITTLE_ENDIAN is set then check 
+	MEMBER_TYPE_FORCES_BLK even if mode == VOIDmode.
+	* config/ia64/hpux.h (MEMBER_TYPE_FORCES_BLK): Set to true
+	so that Structures of one field are still treated as structures.
+	(FUNCTION_ARG_REG_LITTLE_ENDIAN): New, set it to true.
+	(FUNCTION_ARG_PADDING): Set to ia64_hpux_function_arg_padding().
+	(PAD_VARARGS_DOWN): Modify from default to not pad structures down.
+	* config/ia64/ia64-protos.h (ia64_hpux_function_arg_padding): New.
+	* config/ia64/ia64.c (ia64_hpux_function_arg_padding): New function
+	to special case handling of structure padding.
+
 2001-12-11  Daniel Berlin  <dan@cgsoftware.com>
 
 	* sched-rgn.c (CONST_BASED_ADDRESS_P): CONST_INT -> CONSTANT_P.
