* objc/objc-act.c (build_string_class_template): New.         (build_objc_string_object): Call it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47908 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Richard Henderson  <rth@redhat.com>
+
+	* objc/objc-act.c (build_string_class_template): New.
+	(build_objc_string_object): Call it.
+
 2001-12-11  Steve Ellcey  <sje@cup.hp.com>
 
 	* doc/tm.texi (FUNCTION_ARG_REG_LITTLE_ENDIAN): New.
