2001-12-11  David O'Brien  <obrien@FreeBSD.org> 	* elfos.h (ENDFILE_SPEC, STARTFILE_SPEC): Do not define. 	* config/cris/cris.h (ENDFILE_SPEC): Define. 	* config/i386/i386elf.h ((ENDFILE_SPEC, STARTFILE_SPEC): Define. 	* config/pa/elf.h: Likewise.
Approved by:  Richard Henderson <rth@redhat.com>
              Message-ID: <20011211153437.A24619@redhat.com>


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47909 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-11  David O'Brien  <obrien@FreeBSD.org>
+
+	* elfos.h (ENDFILE_SPEC, STARTFILE_SPEC): Do not define.
+	* config/cris/cris.h (ENDFILE_SPEC): Define.
+	* config/i386/i386elf.h ((ENDFILE_SPEC, STARTFILE_SPEC): Define.
+	* config/pa/elf.h: Likewise.
+
 2001-12-11  Richard Henderson  <rth@redhat.com>
 
 	* objc/objc-act.c (build_string_class_template): New.
