* config/sparc/sparc.md (prefetch): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47911 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-11  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* config/sparc/sparc.md (prefetch): New.
+
 2001-12-11  Aldy Hernandez  <aldyh@redhat.com>
 
         * output.h (regno_uninitialized): Make argument unsigned.
