* combine.c (simplify_shift_const): Move SHIFT_COUNT_TRUNCATED         simplification above out of range check.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47912 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Richard Henderson  <rth@redhat.com>
+
+	* combine.c (simplify_shift_const): Move SHIFT_COUNT_TRUNCATED
+	simplification above out of range check.
+
 2001-12-11  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* config/sparc/sparc.md (prefetch): New.
