--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2001-12-11  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.h (TARGET_FIXUP_EV5_PREFETCH): New.
+	* config/alpha/linux.h (TARGET_FIXUP_EV5_PREFETCH): New.
+	* config/alpha/alpha.md (prefetch): New.
+
+2001-12-11  Richard Henderson  <rth@redhat.com>
+
 	* combine.c (simplify_and_const_int): Simplify (AND (PLUS X Y) C)
 	if C has only low bits set and doesn't intersect with X or Y.
 
